# lists

./: build  build.sh  meson.build  test.mdlist
src/: Document.vala  Editor.vala  Item.vala  List.vala  ListEditor.vala  ListItem.vala  Lists.vala  Window.vala  listFromStream.vala  main.vala
src/ui/: ListEditor.ui  lists.gresource.xml  main.ui
src/widgets/: ListEditor.vala  ListItemWidget.vala  Window.vala
